CatRadio

(+ New, * Updated, - Removed)

1.4.1 - 2024-xx-xx
	+ Check hamlib version on startup

1.4.0 - 2024-03-17
	+ Auto Connect option
	+ Auto Power-on option
	+ High SWR indicator
	+ Meter peak hold indicator
	+ Debug mode
	* Updated serial port configuration
	* Bug fix: NR level
	* Bug fix: Repeater shift
	* Bug fix: Power status
	* Bug fix: COM port list
	* Updated to library Hamlib 4.6 beta

1.3.0 - 2022-11-24
	+ Radio info
	+ Dark theme
	+ MIC levels
	* Bug fix: Sort bandwidth list
	* General GUI and code improvements
	+ NB2
	* Bug fix: Sliders
	+ Sub meter COMP, ID, VDD
	+ Band stack for supported Yaesu radios
	* Updated to library Hamlib 4.5
	+ Save/restore window settings

1.2.0 - 2022-04-13
	+ VFO Display on Sub VFO
	+ Clarifier RIT/XIT commands
	+ Up/Down VFO buttons
	+ Repeater shift offset
	+ DCS code and squelch
	+ COM port list in the Radio Config Dialog
	* Improved Radio Config Dialog
	* Bug fix: Quick Split button
	* Bug fix: address the proper VFO red during Tx
	* Bug fix: IF shift slider now correctly updated
	* Bug fix: CW/FM tab autofocus freeze

1.1.1 -	2022-03-19
	* VFO operations: check rig caps before perform VFO operations
	* Sub VFO: improve sub VFO functions using targetable_vfo caps

1.1.0 - 2022-03-13
	+ AF Gain and Squelch slider
	+ Tab with CW and FM functions
	+ CW keyer speed
	+ FM repeater shift and CTCSS tone
	+ Red color VFO during transmit
	* SWR meter with log scale
	* CI-V Address entry in hex
	* Bug fix: RF Gain slider now correctly updated
	* Bug fix: noise filters init settings now correctly updated
	* Bug fix: subVFO mode
	* Bug fix: VFO dial now with pointer tracking 
	* Cosmetic adjustement to fit the font for different SO compiler

1.0.0 - 2022-02-13
	First release