@@ -3,6 +3,7 @@ CatRadio
 (+ New, * Updated, - Removed)
 
 1.4.1 - 2024-xx-xx
+	+ CW memory keyer for Yaesu
 	+ Check hamlib version on startup
 
 1.4.0 - 2024-03-17
